fixed font size for inspire empower transform on mobile

--- a/resources/assets/sass/modules/_flexslider.scss
+++ b/resources/assets/sass/modules/_flexslider.scss
@@ -66,3 +66,13 @@ ul.flex-direction-nav{
 		font-size:2rem;
 	}
 }
+
+@media (max-width:600px){
+	.inspirewrap{
+		bottom:0;
+	}
+	.inspireempowertransform{
+		font-size:1.2rem;
+	}
+
+}
